js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-return-await-typeof-import-call-source-property.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
return
await
typeof
import
.
source
.
UNKNOWN
;
}
